<?xml version="1.0" encoding="utf-8"?>
<!--新增紀錄-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#510398"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".activity.AddPlantActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/add_toolbar_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:logo="@drawable/add_tittle_icon"
        app:title="@string/title_str" />

    <LinearLayout style="@style/AppTheme.AddPlantLinearLayout">

        <TextView
            android:id="@+id/add_tvType_id"
            style="@style/AppTheme.AddPlantTextView"
            android:text="@string/type_add_str" />

        <Spinner
            android:id="@+id/add_spinner_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="0.5"
            android:entries="@array/type_atr" />

    </LinearLayout>

    <LinearLayout style="@style/AppTheme.AddPlantLinearLayout">

        <TextView
            android:id="@+id/add_tvPlantame_id"
            style="@style/AppTheme.AddPlantTextView"
            android:text="@string/name_str" />

        <EditText
            android:id="@+id/add_etPlantName_id"
            style="@style/AppTheme.addPlantEdit"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout style="@style/AppTheme.AddPlantLinearLayout">

        <TextView
            android:id="@+id/add_tvFamily_id"
            style="@style/AppTheme.AddPlantTextView"
            android:text="@string/family_str" />

        <EditText
            android:id="@+id/add_etFamily_id"
            style="@style/AppTheme.addPlantEdit"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout style="@style/AppTheme.AddPlantLinearLayout">

        <TextView
            android:id="@+id/add_tvLocation_id"
            style="@style/AppTheme.AddPlantTextView"
            android:text="@string/location_str" />

        <EditText
            android:id="@+id/add_etLocation_id"
            style="@style/AppTheme.addPlantEdit"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout style="@style/AppTheme.AddPlantLinearLayout">

        <TextView
            android:id="@+id/add_tvNum_id"
            style="@style/AppTheme.AddPlantTextView"
            android:text="@string/number_str" />

        <EditText
            android:id="@+id/add_etNum_id"
            style="@style/AppTheme.addPlantEdit"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        style="@style/AppTheme.AddPlantLinearLayout"
        android:layout_weight="0.18"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/add_tvLng_id_id"
                style="@style/AppTheme.AddPlantTextView"
                android:layout_marginStart="0dp"
                android:text="@string/lng_str" />

            <EditText
                android:id="@+id/add_etLng_id"
                style="@style/AppTheme.addPlantEdit"
                android:layout_weight="0.5"
                android:ems="18"
                android:inputType="number"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/add_tvLat_id_id"
                style="@style/AppTheme.AddPlantTextView"
                android:layout_marginStart="0dp"
                android:text="@string/lat_str" />

            <EditText
                android:id="@+id/add_etLat_id"
                style="@style/AppTheme.addPlantEdit"
                android:layout_weight="0.5"
                android:ems="18"
                android:inputType="number"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout style="@style/AppTheme.AddPlantLinearLayout">

        <TextView
            android:id="@+id/add_tvDate_id"
            style="@style/AppTheme.AddPlantTextView"
            android:text="@string/date_str" />

        <EditText
            android:id="@+id/add_etDate_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="date" />

    </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.AddPlantLinearLayout"
            android:layout_weight="0.26"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_layoutDes_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:counterEnabled="true"
                app:counterMaxLength="50">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/add_inputDes_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/des_str"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_weight="0.08"
        android:gravity="right"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/add_btn_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/add_str" />

        <Button
            android:id="@+id/clean_btn_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="0.3"
            android:text="@string/clean_str" />
    </LinearLayout>
</LinearLayout>