<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <FrameLayout
        android:id="@+id/main_fragment_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </FrameLayout>

    <RadioGroup
        android:id="@+id/rb_group_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:padding="3dp"
        android:background="@color/colorPrimary">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_gymnosperm_id"
            style="@style/AppTheme.RadioButton"
            android:drawableTop="@drawable/rb_gymnosperm_drawable"
            android:text="@string/rb_gymnosperm_str" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_angiosperm_id"
            style="@style/AppTheme.RadioButton"
            android:drawableTop="@drawable/rb_angiosperm_drawable"
            android:text="@string/rb_angiosperm_str" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_fern_id"
            style="@style/AppTheme.RadioButton"
            android:drawableTop="@drawable/rb_fern_drawable"
            android:text="@string/rb_fern_str" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_other_id"
            style="@style/AppTheme.RadioButton"
            android:drawableTop="@drawable/rb_other_drawable"
            android:text="@string/rb_other_str" />
    </RadioGroup>
</LinearLayout>