<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".activity.PlantsInfoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/info_toolbar_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:logo="@drawable/book_ic"
        app:title="@string/plants_info_str" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:scrollbarStyle="insideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v4.view.ViewPager
                android:id="@+id/info_viewpager_id"
                android:layout_width="match_parent"
                android:layout_height="320dp">

            </android.support.v4.view.ViewPager>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <TextView
                    android:id="@+id/tv1"
                    style="@style/PlantInfoTheme_TextView"
                    android:layout_weight="2"
                    android:text="科名 :" />

                <TextView
                    android:id="@+id/info_family_id"
                    style="@style/PlantInfoTheme_TextView"
                    android:layout_weight="6"
                    android:text="科名" />

                <TextView
                    android:id="@+id/tv2"
                    style="@style/PlantInfoTheme_TextView"
                    android:layout_weight="2"
                    android:text="日期 :" />

                <TextView
                    android:id="@+id/info_date_id"
                    style="@style/PlantInfoTheme_TextView"

                    android:layout_weight="5"
                    android:text="日期" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <TextView
                    android:id="@+id/tv3"
                    style="@style/PlantInfoTheme_TextView"
                    android:layout_weight="2"
                    android:text="地點 :" />

                <TextView
                    android:id="@+id/info_location_id"
                    style="@style/PlantInfoTheme_TextView"
                    android:layout_weight="6"
                    android:text="地點" />

                <TextView
                    android:id="@+id/tv5"
                    style="@style/PlantInfoTheme_TextView"
                    android:layout_weight="2"
                    android:text="數量 :" />

                <TextView
                    android:id="@+id/info_num_id"
                    style="@style/PlantInfoTheme_TextView"
                    android:layout_weight="5"
                    android:text="數量" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <TextView
                    style="@style/PlantInfoTheme_TextView"
                    android:layout_weight="1"
                    android:text="@string/lng_str" />
                <TextView
                    android:id="@+id/info_tvLng_id"
                    style="@style/PlantInfoTheme_TextView"
                    android:layout_weight="7"
                    android:text="@string/lng_str" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <TextView
                    style="@style/PlantInfoTheme_TextView"
                    android:layout_weight="1"
                    android:text="@string/lat_str" />
                <TextView
                    android:id="@+id/info_tvLat_id"
                    style="@style/PlantInfoTheme_TextView"
                    android:layout_weight="7"
                    android:text="@string/lat_str" />

            </LinearLayout>

            <TextView
                android:id="@+id/info_des_id"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="#000"
                android:text="說明 : "
                android:textSize="16sp" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>